# graphics

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/bloom/: CMakeLists.txt  Scene.h  main.cpp  shaders.h  vertices.h
src/app/chader/: CMakeLists.txt  Chader.cpp  Chader.h  FileWatcher.cpp  FileWatcher.h  GenericDrawer.h  Scene.h  main.cpp
src/app/chader/defaultshaders/: vertex.vert
src/app/demo/: CMakeLists.txt  Render.cpp  Render.h  main.cpp
src/app/doubledraw/: CMakeLists.txt  scene.h
src/app/gltf_viewer/gltf_viewer/: CMakeLists.txt  Camera.h  DataLayout.h  DebugDrawer.cpp  DebugDrawer.h  GltfAnimation.cpp  GltfAnimation.h  GltfRendering.cpp  GltfRendering.h  LoadBuffer.cpp  LoadBuffer.h  Logging.cpp  Logging.h  Mesh.cpp  Mesh.h  Polar.h  Scene.cpp  Scene.h  Shaders.h  SkeletalAnimation.cpp  SkeletalAnimation.h  Url.h  main.cpp
src/app/graphics_tests/graphics_tests/: CMakeLists.txt  Image_tests.cpp
src/app/handy_tests/handy_tests/: Base64_tests.cpp  CMakeLists.txt  StringId_tests.cpp
src/app/prototypes/_bootstrap/: CMakeLists.txt
src/app/prototypes/bloom/: CMakeLists.txt  Scene.h  main.cpp  shaders.h  vertices.h
src/app/prototypes/chader/: CMakeLists.txt  Chader.cpp  FileWatcher.cpp  GenericDrawer.h  Scene.h  main.cpp
src/app/prototypes/curve/: CMakeLists.txt  Scene.h  main.cpp  shaders.h
src/app/prototypes/demo/: CMakeLists.txt
src/app/prototypes/doubledraw/: CMakeLists.txt  main.cpp  scene.h  shaders.h
src/app/prototypes/font/: CMakeLists.txt  Freetype.h  Scene.h  main.cpp  shaders.h
src/app/prototypes/polyline/: CMakeLists.txt  Scene.h  main.cpp  shaders.h
src/app/prototypes/ringdrop/: CMakeLists.txt  Ring.h  main.cpp  scene.h
src/app/prototypes/simple/: CMakeLists.txt
src/app/prototypes/sprite_animation/: CMakeLists.txt  main.cpp  scene.h
src/app/prototypes/spriting/: CMakeLists.txt  main.cpp  scene.h
src/app/prototypes/tiler/: CMakeLists.txt  main.cpp  scene.h
src/app/ringdrop/: CMakeLists.txt  Ring.h  main.cpp  scene.h  shaders.h
src/app/simple/: CMakeLists.txt
src/app/spriting/: CMakeLists.txt  main.cpp  scene.h
src/app/test_commons/test_commons/: CMakeLists.txt  build_config.h.in
src/app/tests/: Image_tests.cpp
src/app/tests/tests/: CMakeLists.txt  Image_tests.cpp
src/app/tiler/: CMakeLists.txt  Terrain.h  main.cpp  scene.h
src/apps/graphics_tests/graphics_tests/: CMakeLists.txt  FilesystemHelpers.h  ImageConvolution_tests.cpp  Image_tests.cpp  Scope_tests.cpp  ShaderSource_tests.cpp
src/apps/prototypes/_bootstrap/: CMakeLists.txt  Scene.h  main.cpp  shaders.h
src/apps/prototypes/bloom/: CMakeLists.txt  Scene.h  main.cpp  vertices.h
src/apps/prototypes/chader/: CMakeLists.txt  Chader.h
src/apps/prototypes/curve/: Scene.h  main.cpp  shaders.h
src/apps/prototypes/doubledraw/: main.cpp  scene.h
src/apps/prototypes/font/: CMakeLists.txt  Scene.h  main.cpp
src/apps/prototypes/polyline/: CMakeLists.txt  Scene.h  shaders.h
src/apps/prototypes/ringdrop/: scene.h  shaders.h
src/apps/prototypes/shader_introspection/: CMakeLists.txt  Introspection.h  main.cpp
src/apps/prototypes/sprite_animation/: scene.h
src/apps/prototypes/tiler/: CMakeLists.txt  main.cpp  scene.h
src/apps/test_commons/test_commons/: PathProvider.h
src/lib/2d/2d/: CMakeLists.txt  Engine.cpp  Engine.h  Sprite.h  Spriting.cpp  Spriting.h  Tiling.cpp  Tiling.h  Vertex.h  commons.h  shaders.h
src/lib/GSL-2.0.0/gsl/: CMakeLists.txt
src/lib/arte/arte/: CMakeFinds.cmake.in  CMakeLists.txt  Freetype.h  Gltf.cpp  Gltf.h  Image.cpp  Image.h  Logging.cpp  Logging.h  SpriteSheet.cpp  SpriteSheet.h
src/lib/engine/engine/: Application.h  CMakeFinds.cmake.in  CMakeLists.txt  CameraUtilities.h  Curving-shaders.h  Curving.cpp  Curving.h  DrawLine.h  Engine.cpp  Engine.h  Sprite.h  Spriting.cpp  Spriting.h  Tiling-impl.h  Tiling.cpp  Tiling.h  Timer.h  TrivialLineStrip.cpp  TrivialLineStrip.h  TrivialShaping.cpp  TrivialShaping.h  Vertex.h  commons.h  shaders.h
src/lib/graphics/graphics/: AppInterface.cpp  AppInterface.h  Application.h  ApplicationGlfw.h  CMakeFinds.cmake.in  CMakeLists.txt  CameraUtilities.h  Curving-shaders.h  Curving.cpp  Curving.h  DrawLine.cpp  DrawLine.h  Sprite.h  SpriteAnimator.cpp  SpriteAnimator.h  SpriteLoading.cpp  SpriteLoading.h  Spriting.cpp  Spriting.h  Texting.cpp  Texting.h  Tiling-impl.h  Tiling.cpp  Tiling.h  Timer.h  TrivialLineStrip.cpp  TrivialLineStrip.h  TrivialPolygon.cpp  TrivialPolygon.h  TrivialShaping.cpp  TrivialShaping.h  Vertex.h  commons.h  shaders.h
src/lib/handy/handy/: Base64.h  Bitmask.h  CMakeLists.txt  Crc.h  Guard.h  StringId.h  ZeroOnMove.h  array_utils.h  random.h  tuple_utils.h
src/lib/imgui/imgui/: CMakeLists.txt  ImguiUi.cpp  ImguiUi.h
src/lib/imguiui/imguiui/: CMakeFinds.cmake.in  ImguiUi.cpp
src/lib/platform/platform/: CMakeLists.txt  Filesystem.h
src/lib/renderer/renderer/: CMakeFinds.cmake.in  CMakeLists.txt  Drawing.h  Error.h  FrameBuffer.h  GL_Loader.h  Handy.h  Image.h  MappedGL.h  Query.h  Range.h  Rectangle.h  Shading.cpp  Shading.h  Texture.cpp  Texture.h  UniformBuffer.h  Uniforms.h  VertexSpecification.cpp  VertexSpecification.h  VertexSpecification_deduction.h  commons.h  gl_helpers.h
src/lib/resource/resource/: CMakeLists.txt  PathProvider.h  ResourceManager.h  build_config.h.in
src/libs/arte/arte/: CMakeLists.txt  Freetype.h  Image.cpp  Image.h  ImageConvolution.h  SpriteSheet.cpp
src/libs/graphics/graphics/: AppInterface.cpp  AppInterface.h  ApplicationGlfw.cpp  ApplicationGlfw.h  CMakeLists.txt  CameraUtilities.h  Curving-shaders.h  Curving.cpp  Curving.h  DrawLine.cpp  DrawLine.h  Sprite.h  Spriting.cpp  Spriting.h  TextUtilities.cpp  TextUtilities.h  Texting.cpp  Texting.h  Tiling.cpp  Tiling.h  TrivialLineStrip.cpp  TrivialLineStrip.h  TrivialPolygon.cpp  TrivialPolygon.h  TrivialShaping.cpp  TrivialShaping.h  Vertex.h  shaders.h
src/libs/imguiui/imguiui/: CMakeLists.txt  ImguiUi.cpp  ImguiUi.h  Widgets-impl.h  Widgets.cpp  Widgets.h
src/libs/renderer/renderer/: AttributeDimension.cpp  AttributeDimension.h  BufferBase.h  (+27 more)
(+109 files in other folders)
