add_subdirectory(libs/arte/arte)
add_subdirectory(libs/renderer/renderer)
add_subdirectory(libs/graphics/graphics)
add_subdirectory(libs/imguiui/imguiui)

option(BUILD_tests "Build the demo applications" ON)
if(BUILD_tests)
    add_subdirectory(apps/test_commons/test_commons)
    add_subdirectory(apps/graphics_tests/graphics_tests)

    # In order of implementation
    add_subdirectory(apps/prototypes/demo)
    add_subdirectory(apps/prototypes/simple)
    add_subdirectory(apps/prototypes/sprite_animation)
    add_subdirectory(apps/prototypes/doubledraw)
    add_subdirectory(apps/prototypes/ringdrop)
    add_subdirectory(apps/prototypes/tiler)
    add_subdirectory(apps/prototypes/bloom)
    add_subdirectory(apps/prototypes/chader)
    add_subdirectory(apps/prototypes/polyline)
    add_subdirectory(apps/prototypes/curve)
    add_subdirectory(apps/prototypes/font)

    add_subdirectory(apps/samples/trivial_linestrip/trivial_linestrip)
    add_subdirectory(apps/samples/trivial_shaping/trivial_shaping)
    add_subdirectory(apps/samples/spriting/spriting)
    add_subdirectory(apps/samples/sprite-animation/sprite-animation)
    add_subdirectory(apps/samples/curving/curving)
    add_subdirectory(apps/samples/gaussblur-sprite/gaussblur-sprite)
    add_subdirectory(apps/samples/texting/texting)
    add_subdirectory(apps/samples/tiling/tiling)
    add_subdirectory(apps/samples/tiling-callback/tiling-callback)
endif()
